force-app/main/default/objects/ssot__MemberPlan__dlm/fields/ssot__HealthcarePayerNetworkId__c.field-meta.xml
<CustomField>
    <fullName>ssot__HealthcarePayerNetworkId__c</fullName>
    <label>Healthcare Payer Network</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>HealthcarePayerNetworkId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>