force-app/main/default/objects/ssot__MemberPlan__dlm/fields/ssot__LastVerificationDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__LastVerificationDate__c</fullName>
    <label>Last Verification Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>LastVerificationDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>