force-app/main/default/objects/ssot__MemberPlan__dlm/fields/ssot__MemberId__c.field-meta.xml
<CustomField>
    <fullName>ssot__MemberId__c</fullName>
    <label>Member</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>MemberId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>