force-app/main/default/objects/ssot__MemberPlan__dlm/fields/ssot__MemberNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__MemberNumber__c</fullName>
    <label>Member Number</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>MemberNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>