force-app/main/default/objects/ssot__MemberPlan__dlm/fields/ssot__MemberPlan_PatientId_map_Patient_Id_N_1__c.field-meta.xml
<CustomField>
    <fullName>ssot__MemberPlan_PatientId_map_Patient_Id_N_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MemberPlan_PatientId_map_Patient_Id_N_1</label>
    <referenceTo>ssot__Patient__dlm</referenceTo>
    <relationshipLabel>MemberPlan_PatientId_map_Patient_Id_N_1</relationshipLabel>
    <relationshipName>MemberPlan_PatientId_map_Patient_Id_N_1</relationshipName>
    <type>Lookup</type>
</CustomField>