force-app/main/default/objects/ssot__MemberPlan__dlm/fields/ssot__PayerAccountId__c.field-meta.xml
<CustomField>
    <fullName>ssot__PayerAccountId__c</fullName>
    <label>Payer Account</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PayerAccountId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>