force-app/main/default/objects/ssot__MemberPlan__dlm/fields/ssot__PlanType__c.field-meta.xml
<CustomField>
    <fullName>ssot__PlanType__c</fullName>
    <label>Plan Type</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PlanType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>