force-app/main/default/objects/ssot__MemberPlan__dlm/fields/ssot__rel_1716725667943_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716725667943_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MemberPlan_PurchaserPlanId_map_Purch_rel</label>
    <referenceTo>ssot__PurchaserPlan__dlm</referenceTo>
    <relationshipLabel>MemberPlan_PurchaserPlanId_map_Purch_rel</relationshipLabel>
    <relationshipName>rel_1716725667943_end</relationshipName>
    <type>Lookup</type>
</CustomField>