force-app/main/default/objects/ssot__MemberPlan__dlm/fields/ssot__rel_1721372010061_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1721372010061_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MemberPlan_MemberAccountId_map_Accou_rel</label>
    <referenceTo>ssot__Account__dlm</referenceTo>
    <relationshipLabel>MemberPlan_MemberAccountId_map_Accou_rel</relationshipLabel>
    <relationshipName>rel_1721372010061_end</relationshipName>
    <type>Lookup</type>
</CustomField>